# todo

./: main.py  pyproject.toml
handlers/: todos.py  users.py
static/: styles.css
templates/: base.html  login.html  password-recovery-code.html  password-recovery.html  registration.html  todo-list.html
